--- a/public_html/documentation/style.css
+++ b/public_html/documentation/style.css
@@ -18,6 +18,7 @@ h1 {
 
 section {
     margin: 2rem 25%;
+    width: 50%;
 }
 
 ul {
@@ -26,4 +27,8 @@ ul {
 
 li {
     margin: 0.25em 0;
+}
+
+img {
+    width: 100%
 }
